SERVER-89154 Synchronize access to ReplicaSetMonitorManager::_stats shared pointer (#20997)

GitOrigin-RevId: 7c01ccab62d223bb0263c1d8cc516a35478deae9